--- a/views/admin/products/edit_category.hbs
+++ b/views/admin/products/edit_category.hbs
@@ -20,7 +20,7 @@
     <!-- font awesome icons -->
     <script src="https://kit.fontawesome.com/8faedc4425.js" crossorigin="anonymous"></script>
 
-    <link rel="stylesheet" href="../css/styles_dashboard.css">
+    <link rel="stylesheet" href="/css/styles_dashboard.css">
 </head>
 
 <body>
@@ -167,6 +167,75 @@
                         </div>
                 
                     </div>
+                </div>
+
+                <h2>Productos Registrados en Categoria</h2>
+
+                {{!-- filters --}}
+
+                <div class="table-sm-responsive mt-4">
+                {{#if products}}
+                    <table class="table table-hover table-bordered">
+                        <thead>
+                            <tr>
+                                <th>ID</th>
+                                <th>Imagen</th>
+                                <th>Nombre</th>
+                                <th>Precio</th>
+                                <th>Categoria</th>
+                                <th>Stock</th>
+                            </tr>
+                        </thead>
+                        <tbody class="table-group-divider">
+                        {{#each products}}
+                            <tr class="">
+                                <td class="order align-middle white-space-nowrap">{{id}}</td>
+                                <td class="order align-middle white-space-nowrap"><img src="{{img_dir}}" alt="img" width="50" ></td>
+                                <td class="align-middle white-space-nowrap ps-8">
+                                    <a class=" align-items-center" href="/admin/edit_product/{{id}}">
+                                        <h6 class="mb-0 text-900 h5">{{name}}</h6>
+                                    </a>
+                                </td>
+                                <td class="total align-middle fw-semi-bold text-1000">{{price}} Bs.</td>
+                                <td>
+                                    {{#each categories}}
+                                        <span class="badge text-bg-light">{{this}}</span>                                         
+                                    {{/each}}
+                                    {{!-- <span class="badge text-bg-light">Electronica</span> --}}
+                                </td>
+                                <td class="date align-middle white-space-nowrap text-700 "><span class="h5">{{stock}}</span> unidades</td>
+                            </tr>
+                            {{/each}}
+                        </tbody>
+                    </table>
+                {{else}}
+                    <div class="col-md-8 mx-auto text-center pt-5">
+                        <div class="card card-body">
+                            <h2>No hay ningún producto registrado en esta categoria</h2>
+                            <a href="/admin/add_product"><h3>Añadir Un nuevo Producto</h3></a>
+                        </div>
+                    </div>
+                {{/if}}
+                </div>
+
+                {{!-- pagination bar --}}
+                <div class="container-fluid mt-4">
+                    <nav aria-label="Page navigation example">
+                        <ul class="pagination justify-content-center">
+                            {{#with pagination_bar}}
+                                <li class="page-item {{#unless previous}}disabled{{/unless}}"><a class="page-link" href="{{link}}?page=1"><i class="fa-solid fa-angles-left"></i></a></li>
+                                <li class="page-item {{#unless previous}}disabled{{/unless}}"><a class="page-link" 
+                                    href="{{link}}?page={{previous}}">Anterior</a></li>
+                                {{#each display_nums}}
+                                    <li class="page-item {{#if (lookup ../currentPageActive @index)}}active{{/if}}"><a class="page-link" 
+                                        href="{{link}}?page={{this}}">{{this}}</a></li>
+                                {{/each}}
+                                <li class="page-item {{#unless next}}disabled{{/unless}}"><a class="page-link" 
+                                    href="{{link}}?page={{next}}">Siguiente</a></li>
+                                <li class="page-item {{#unless next}}disabled{{/unless}}"><a class="page-link" href="{{link}}?page={{numberOfPages}}"><i class="fa-solid fa-angles-right"></i></a></li>
+                            {{/with}}
+                        </ul>
+                    </nav>
                 </div>
             </main>
         </div>
