--- a/views/admin/products/edit_category.hbs
+++ b/views/admin/products/edit_category.hbs
@@ -121,7 +121,7 @@
                 <div class="container-fluid px-0 pt-3 pb-2 mb-4 border-bottom">
                     <div class="row ">
                         <div class="col mb-2">
-                            <a class="btn btn-primary" href="/admin/salesperson"><i class="fa-solid fa-chevron-left"></i> Atras</a>
+                            <a class="btn btn-primary" href="/admin/categories"><i class="fa-solid fa-chevron-left"></i> Atras</a>
                         </div>
                         <div class="col-6 text-center">
                             <h2>Añadir Nueva Categoria de Productos</h2>
@@ -190,7 +190,7 @@
                         {{#each products}}
                             <tr class="">
                                 <td class="order align-middle white-space-nowrap">{{id}}</td>
-                                <td class="order align-middle white-space-nowrap"><img src="{{img_dir}}" alt="img" width="50" ></td>
+                                <td class="order align-middle white-space-nowrap"><img src="{{{img_dir}}}" alt="img" width="50" ></td>
                                 <td class="align-middle white-space-nowrap ps-8">
                                     <a class=" align-items-center" href="/admin/edit_product/{{id}}">
                                         <h6 class="mb-0 text-900 h5">{{name}}</h6>
