--- a/views/admin/clientsNcustomers/salesperson.hbs
+++ b/views/admin/clientsNcustomers/salesperson.hbs
@@ -19,7 +19,7 @@
     <!-- font awesome icons -->
     <script src="https://kit.fontawesome.com/8faedc4425.js" crossorigin="anonymous"></script>
     
-    <link rel="stylesheet" href="../css/styles_dashboard.css">
+    <link rel="stylesheet" href="/css/styles_dashboard.css">
 </head>
 <body>
     
@@ -116,13 +116,53 @@
 
             <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
                 <div class="container-fluid px-0">
-                    <div
-                        class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-                        <h1 class="h2">Vendedores</h1>
-                        <div class="btn-toolbar mb-2 mb-md-0">
-                            <a class="btn btn-success" href="/admin/add_employee">Añadir Empleado <i class="fa-solid fa-plus"></i></a>
+                    
+
+                <div class="align-items-center pt-3 pb-2 mb-3 border-bottom">
+                        <div class="row">
+                            <div class="col">
+                                <h1 class="h2">Vendedores</h1>
+                            </div>
+                            <div class="col col-6">
+                                <div class="row">
+                                    <div class="col"></div>
+                                    <div class="col col-sm-12 col-md-10 col-xl-10">    
+
+                                        {{!-- search bar  --}}
+                                        <form action="/admin/salesperson/search" method="get">
+                                            <div class="input-group flex-nowrap">
+                                                    <select class="form-select " style="max-width: 120px" id="searchType" name="searchType">
+                                                        {{#with searchType}}
+                                                            <option value="all" {{#if all}}selected{{/if}}>Todo</option>
+                                                            <option value="email"{{#if email}}selected{{/if}}>Email</option>
+                                                            <option value="first_name" {{#if first_name}}selected{{/if}}>Nombre/s</option>
+                                                            <option value="last_name" {{#if last_name}}selected{{/if}}>Apellidos</option>
+                                                            <option value="phone_number" {{#if phone_number}}selected{{/if}}>Teléfono</option>
+                                                            <option value="address" {{#if address}}selected{{/if}}>Dirección</option>
+                                                        {{else}}
+                                                            <option value="all" selected>Todo</option>
+                                                            <option value="email">Email</option>
+                                                            <option value="first_name">Nombre/s</option>
+                                                            <option value="last_name">Apellidos</option>
+                                                            <option value="phone_number">Teléfono</option>
+                                                            <option value="address">Dirección</option>
+                                                        {{/with}}
+                                                    </select>
+                                                <input name="searchText" type="text" class="form-control" placeholder="Buscar en Clientes" aria-label="Username" aria-describedby="addon-wrapping" value="{{searchValue}}">
+                                                <button type="submit" class="btn btn-outline-primary"><i class="fa-solid fa-magnifying-glass"></i> Buscar</button>
+                                            </div>
+                                        </form>
+                                    </div>
+                                    <div class="col"></div>
+                                </div>
+                            </div>
+                            <div class="col text-end">
+                                <a class="btn btn-success" href="/admin/add_employee">Añadir Empleado <i class="fa-solid fa-plus"></i></a>
+                            </div>
                         </div>
+                        
                     </div>
+
                 {{#if message}}
                     <div class="alert {{alertType}} alert-dismissible fade show" role="alert">
                         {{message}}
@@ -165,8 +205,8 @@
                     {{else}}
                         <div class="col-md-8 mx-auto text-center pt-5">
                             <div class="card card-body">
-                                <h2>No hay ningún producto registrado</h2>
-                                <a href="/links/add"><h3>Añadir Un nuevo Producto</h3></a>
+                                <h2>No hay resultados de la busqueda</h2>
+                                <a href="/admin/salesperson"><h3>Volver al Inicio</h3></a>
                             </div>
                         </div>
                     {{/if}}
