search functionality to category section working properly also changed some directories to other link wrong pages

--- a/views/admin/clientsNcustomers/salesperson.hbs
+++ b/views/admin/clientsNcustomers/salesperson.hbs
@@ -148,7 +148,7 @@
                                                             <option value="address">Dirección</option>
                                                         {{/with}}
                                                     </select>
-                                                <input name="searchText" type="text" class="form-control" placeholder="Buscar en Clientes" aria-label="Username" aria-describedby="addon-wrapping" value="{{searchValue}}">
+                                                <input name="searchText" type="text" class="form-control" placeholder="Buscar en Vendedores" aria-label="Username" aria-describedby="addon-wrapping" value="{{searchValue}}">
                                                 <button type="submit" class="btn btn-outline-primary"><i class="fa-solid fa-magnifying-glass"></i> Buscar</button>
                                             </div>
                                         </form>
