--- a/views/admin/products/add_category.hbs
+++ b/views/admin/products/add_category.hbs
@@ -121,7 +121,7 @@
                 <div class="container-fluid px-0 pt-3 pb-2 mb-4 border-bottom">
                     <div class="row ">
                         <div class="col mb-2">
-                            <a class="btn btn-primary" href="/admin/salesperson"><i class="fa-solid fa-chevron-left"></i> Atras</a>
+                            <a class="btn btn-primary" href="/admin/categories"><i class="fa-solid fa-chevron-left"></i> Atras</a>
                         </div>
                         <div class="col text-center">
                             <h2>Añadir Nueva Categoria de Productos</h2>
