--- a/views/admin/products/edit_category.hbs
+++ b/views/admin/products/edit_category.hbs
@@ -138,7 +138,7 @@
                         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                     </div>
                 {{/if}}
-                <div class="container pt-2">
+                <div class="container py-2">
                     <div class="row">
                         <div class="col-md-4 mx-auto">
                             <div class="card">
